# rtf-text-color-parser

./: README.md  pyproject.toml  setup.py
src/greeknames/: greek_name_classifier.py
src/parser/: load_test.py  rtf_color_parser.py
src/parser/batch_conversion/: __init__.py  discussion_converter.py
src/parser/batch_conversion/tests/: __init__.py  test_discussion_converter.py
src/parser/tests/: test_rtf_color_par.py
src/tests/: test_greeknames.py
src/tests/data/: tst_names.txt
